--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </ul>
       </header>
       <section>
-        <p>VIEW only <code>{bild url=target/link/for/view}{img=path/to/img}{tt=Title}</code>
-VIEW&amp;ZOOM <code>{beide url=target/link/for/view}{img=path/to/img}{tt=Title}</code>
-ZOOM only <code>{zoom url=target/link/for/view}{img=path/to/img}{tt=Title}</code></p>
+        <h3>
+<a id="use" class="anchor" href="#use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Use</h3>
 
-<h4>
-<a id="dev-branch" class="anchor" href="#dev-branch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dev Branch</h4>
+<p>VIEW only <code>{bild url=target/link/for/view}{img=path/to/img}{tt=Title}</code><br>
+VIEW&amp;ZOOM <code>{beide url=target/link/for/view}{img=path/to/img}{tt=Title}</code><br>
+ZOOM only <code>{zoom url=target/link/for/view}{img=path/to/img}{tt=Title}</code>  </p>
 
 <p><img src="http://i.giphy.com/xTiTnha7sQBSXcl4SA.gif" alt="Dev Branch"></p>
       </section>
